[package]
name = "brimstone-we-main"
version = "0.1.0"
authors = ["Robert Sedlacek <rs@474.at>"]

[dependencies]
webkit2gtk-webextension = "0.4.0"
webkit2gtk-webextension-sys = "0.4.0"
glib = "0.4.1"
glib-sys = "0.5.0"
brimstone-domain-settings = { path = "../brimstone-domain-settings" }
brimstone-page-state = { path = "../brimstone-page-state" }
url = "1.7.0"
serde_json = "1.0"
serde = "1.0"

[lib]
crate-type = ["cdylib"]
